--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -1,1 +1,32 @@
-<p>by-capital-page works!</p>,
+<section class="flex flex-row gap-2 mt-2">
+  <input
+  type="text"
+  class="input input-bordered me-2 w-56"
+  placeholder="Buscar por capital"
+  autofocus
+  #txtSearch
+  (keyup.enter)="onSearch(txtSearch.value)">
+  <button class="btn btn-primary"(click)="onSearch(txtSearch.value)"
+  >Buscar</button>
+</section>
+
+<section class="mt-5">
+  <table class="table table-md mt-2 w-full">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Icono</th>
+          <th>Bandera</th>
+          <th>Nombre</th>
+          <th>Capital</th>
+          <th>Población</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+
+        </tr>
+      </tbody>
+  </table>
+</section>
